# robot_end_effectors

./: .gitignore  README.md
joulin_vacuum_gripper/: README.md
joulin_vacuum_gripper/abb_gripper_description/: CMakeLists.txt  README.md  package.xml
joulin_vacuum_gripper/abb_gripper_description/launch/: display_with_gripper.launch.py
joulin_vacuum_gripper/abb_gripper_description/urdf/: pp_pg_160x600.urdf.xacro  robot_with_gripper.urdf.xacro
schunk_tool_changer/sws_160_description/: CMakeLists.txt  package.xml
schunk_tool_changer/sws_160_description/meshes/: swa_160_tool_side.stl  swa_160_tool_side_bin.stl  swk_160_robot_side.stl  swk_160_robot_side_bin.stl
schunk_tool_changer/sws_160_description/urdf/: sws_160.urdf.xacro
