<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  Package:  sws_160_description
  Author:   Farzaneh Eskandari
  Email:    farzane.eskandarii@gmail.com
  Date:     2026-06-05
-->
<package format="3">
  <name>sws_160_description</name>
  <version>0.0.0</version>
  <description>
    URDF/xacro description for Schunk SWS-160 automatic tool changer on ABB IRB6700.
    Contains robot side (SWK-160) and tool side (SWA-160) as modular macros.
  </description>
  <maintainer email="farzane.eskandarii@gmail.com">farzaneh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
